Login page built5
Just frontend still 4XX error trying to log in

--- a/gT_Underground/src/app/home/home.component.html
+++ b/gT_Underground/src/app/home/home.component.html
@@ -1,2 +1,79 @@
-<h1>Greetings, stranger.</h1>
-<p>This is what you get for messing with ASP.NET and Angular</p>
+	<!-- "Binary code? REALLY goodTimes?" You must be saying in your head, feeling proud of yourself for figuring out the first cypher...!-->
+	<!-- But it IS just the first one isn't it. Every videogame has a training stage, every journey has a first step...!-->
+	<!-- Well, if you made it here, congratulations on conquering the tutorial...!-->
+	<!-- What, you thought you had it all figured out?!-->
+	<!-- OK, fine, as a reward, you can have access to the GT_U Instagram. The link is the binary code cypher in the previous page if you haven't clicked it yet. -->
+	<!-- This is just the start of the great gT_Underground scavenger hunt...!-->
+	<!-- Once you get here, let goodTimes know and let the games begin. !-->
+
+    <head>
+        <title>WELCOME to the goodTimes_Underground NETWORK</title>    
+    </head>
+    
+    <body>
+      <h1>YOU HAVE FOUND THE GT_UNDERGROUND</h1>
+    
+      <img src="assets/ArtByDaphney.png" alt="Art by Daphney" style="border:5px solid green" width="314" height="314">
+      
+      <h2>Viva la Cannabis!</h2>
+      
+      <p>(\(\</p>
+      <p>[gT_I]</p>
+      <p>c(")(")</p>
+    
+      <h2>
+        <a href="https://docs.google.com/document/d/1_gFp4Vkv3lWyj7oDSzAH5T7-s4kPUH4k1n8GfFoVtzA/edit?usp=sharing">
+          420 SCAVENGER HUNT 2023
+        </a>
+      </h2>   
+    
+      <table>
+        <tbody>
+          <tr>
+            <th>HOMIE</th>
+            <th>LEVEL</th>
+            <th>SCORE</th>
+          </tr>
+          <tr>
+            <td>Zero Cool</td>
+            <td>10</td>
+            <td>0235</td>
+          </tr>
+          <tr>
+            <td>Ignis Draconis</td>
+            <td>25</td>
+            <td>0184</td>
+          </tr>
+          <tr>
+            <td>Nick</td>
+            <td>00</td>
+            <td>145</td>
+          </tr>
+          <tr>
+            <td>J stands for Jay</td>
+            <td>04</td>
+            <td>00120</td>
+          </tr>
+          <tr>
+            <td>PLAYER 5</td>
+            <td>00</td>
+            <td>0000</td>
+          </tr>
+          <tr>
+            <td>PLAYER X</td>
+            <td>10</td>
+            <td>0420</td>
+          </tr>
+        </tbody>
+      </table>
+    
+      <p>
+        <a href="https://www.instagram.com/gtatlecheb/">01011001 01001111 
+          01010101 00100000 01010011 01001000 01001111 01010101 01001100 01000100 
+          00100000 01010011 01000101 01000101 00100000 01001101 01011001 00100000 
+          01010011 01001111 01010101 01010010 01000011 01000101 00100000 01000011 
+          01001111 01000100 01000101
+        </a>
+      </p>
+    
+    </body>
