--- a/gT_Underground/src/app/nav-menu/nav-menu.component.html
+++ b/gT_Underground/src/app/nav-menu/nav-menu.component.html
@@ -12,5 +12,9 @@
     <a mat-flat-button color="primary" [routerLink]="['/health-check']">
       Health Check
     </a>
+    <span class="separator"></span>
+    <a mat-flat-button color="primary" [routerLink]="['/login']">
+      Login
+    </a>
   </mat-toolbar>
 </header>
