--- a/gT_Underground/src/app/nav-menu/nav-menu.component.html
+++ b/gT_Underground/src/app/nav-menu/nav-menu.component.html
@@ -13,8 +13,11 @@
       Health Check
     </a>
     <span class="separator"></span>
-    <a mat-flat-button color="primary" [routerLink]="['/login']">
+    <a *ngIf="isLoggedIn == false" mat-flat-button color="primary" [routerLink]="['/login']">
       Login
+    </a>
+    <a *ngIf="isLoggedIn" mat-flat-button color="primary" (click)="onLogout()">
+      Logout
     </a>
   </mat-toolbar>
 </header>
