Added registration page
-Fixed error message bug on login form:
Interpolation requires backticks not apostraphes.

--- a/gT_Underground/src/app/auth/login.component.html
+++ b/gT_Underground/src/app/auth/login.component.html
@@ -31,6 +31,14 @@
     </mat-form-field>
 
     <div>
+      <a color="primary" [routerLink]="['/register']">
+        Register
+      </a>
+    </div>
+
+    <br />
+
+    <div>
       <button mat-flat-button color="primary" type="submit">
         Login
       </button>
