Good enuf registration

--- a/gT_Underground/src/app/auth/register/register.component.html
+++ b/gT_Underground/src/app/auth/register/register.component.html
@@ -3,9 +3,9 @@
   <h1>Register</h1>
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-    <p>
-      <mat-error *ngIf="registrationResult && registrationResult.success == false">
-        <strong>ERROR</strong>: {{registrationResult.message}}
+    <p *ngIf="registrationResult && registrationResult.success == false">
+      <mat-error *ngFor="let error of registrationResult.errors">
+        {{error}}
       </mat-error>
     </p>
 
